# MRA-TTG-OLD

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: mra-cmake.yaml
cmake/modules/: AddTTGExecutable.cmake  FindOrFetchTTG.cmake
include/: domain.h  functiondata.h  kernels.h  maxk.h  misc.h  platform.h  polynomial.h  tasks.h  tensor.h  tensorview.h
include/mra/: functions.h  kernels.h  mra.h  outer.h  tasks.h
include/mra/functors/: functionfunctor.h  gaussian.h  polynomial.h
include/mra/kernels/: child_slice.h  compress.h  derivative.h  fcoeffs.h  fcube.h  fcube_for_mul.h  gaxpy.h  inner.h  multiply.h  norm.h  outer.h  reconstruct.h  simple_norm.h  transform.h
include/mra/misc/: domain.h  functiondata.h  gl.h  hash.h  key.h  keymaps.h  maxk.h  misc.h  platform.h  range.h  twoscale.h  types.h
include/mra/ops/: functions.h  inner.h  mxm.h  outer.h
include/mra/tasks/: common.h  compress.h  derivative.h  gaxpy.h  multiply.h  norm.h  project.h  reconstruct.h
include/mra/tensor/: child_slice.h  cycledim.h  functionnode.h  functionnorm.h  tensor.h  tensoriter.h  tensorview.h
mra/: CMakeLists.txt
mra/madness/include/: allocator.h  cycledim.h  domain.h  functiondata.h  functionfunctor.h  functionnode.h  functionnorm.h  functions.h  gaussian.h  gl.h  hash.h  kernels.h  key.h  keymaps.h  maxk.h  misc.h  mxm.h  options.h  platform.h  sparsity.h  tensor.h  tensoriter.h  tensorview.h  twoscale.h  types.h
mra/madness/include/kernels/: child_slice.h  compress.h  derivative.h  fcoeffs.h  fcube.h  fcube_for_mul.h  gaxpy.h  inner.h  multiply.h  norm.h  outer.h  reconstruct.h  transform.h
mra/madness/mra-device/: domain.h  functiondata.h  functionnode.h  functions.h  gl.cc  helper.h  kernels.cu  kernels.h  mra-ttg-device.cc  mra-ttg-uot-device.cc  tensor.h  tensorview.h  util.h
mra/madness/mra-device/include/: functiondata.h
mra/madness/mra-device/src/: gl.cc  kernels.cc  kernels.cu  mra-ttg-device.cc  mra-ttg-uot-device.cc
mra/madness/src/: gemmbench.cc  gemmbench.cu  gl.cc  kernels.cc  kernels.cu  mra-ttg-device.cc  mra-ttg-device.cu  mra-ttg-device.hip  mra-ttg-uot-device.cc  mra-ttg-uot-device.cu  mratwoscale.cc  twoscale.cc
mra/madness/tests/: cycledim_test.cc  gaxpy_test.cc  inner_test.cc  matrix_test.cc  tensor_test.cc
src/: CMakeLists.txt  gl.cc  twoscale.cc
src/benchmarks/transformbench/: transformbench.cc  transformbench.hip
src/examples/: test_derivative.cc  test_derivative.cu  test_pcr.cc  test_pcr.cu
src/examples/derivative/: test_derivative.cc  test_derivative.hip
src/examples/pcr/: test_pcr.cc  test_pcr.hip
src/examples/unit/: test_unit.cc  test_unit.cu  test_unit.hip
src/tests/: cycledim_test.cc  gaxpy_test.cc  inner_test.cc  matrix_test.cc  tensor_test.cc
